...
                  Icon(
                      imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                      contentDescription = "Back")
                }
              },
...
                  Icon(
                      imageVector = Icons.Default.Search,
                      contentDescription = "Search",
                      tint = colorScheme.onBackground)
                }
...
                      verticalArrangement = Arrangement.Top) {
                        Text(
                            text = searchSubcategory?.name ?: "Unknown",
                            style = poppinsTypography.labelMedium,
                            fontSize = 24.sp,
...
                              modifier =
                                  Modifier.padding(bottom = screenHeight * 0.01f)
                                      .testTag("tuneButton"),
                              content = {
                                Icon(
                                    imageVector = Icons.Default.Tune,
                                    contentDescription = "Filter",
                                    tint =
                                        if (showFilterButtons) colorScheme.onPrimary
...
                            LazyRow(
                                verticalAlignment = Alignment.CenterVertically,
                                modifier = Modifier.testTag("lazy_filter_row")) {
                                  items(listOfButtons.size) { index ->
                                    QuickFixButton(
...
                      }

                  LazyColumn(modifier = Modifier.fillMaxWidth().testTag("worker_profiles_list")) {
                    items(filteredWorkerProfiles.size) { index ->
                      val profile = filteredWorkerProfiles[index]
...
                              .fillMaxWidth()
                              .background(colorScheme.background)
                              .testTag("sliding_window_content")) {

                        // Top Bar
...
                                      Modifier.fillMaxWidth()
                                          .height(screenHeight * 0.2f)
                                          .testTag("sliding_window_banner_image"),
                                  contentScale = ContentScale.Crop)

...
                                          .offset(x = screenWidth * 0.04f)
                                          .clip(CircleShape)
                                          .testTag("sliding_window_profile_picture"),
                                  // Negative offset to position correctly
                                  contentScale = ContentScale.Crop)
...
                                    style = MaterialTheme.typography.headlineSmall,
                                    color = colorScheme.onBackground,
                                    modifier = Modifier.testTag("sliding_window_worker_address"))
                              }
                            }
...
                                  modifier =
                                      Modifier.padding(horizontal = screenWidth * 0.04f)
                                          .testTag("sliding_window_worker_category"))

                              Spacer(modifier = Modifier.height(screenHeight * 0.02f))
...
                                            Modifier.weight(1f)
                                                .testTag(
                                                    "sliding_window_included_services_column")) {
                                          Text(
                                              text = "Included Services",
...
                                        modifier =
                                            Modifier.weight(1f)
                                                .testTag("sliding_window_addon_services_column")) {
                                          Text(
                                              text = "Add-On Services",
...
                                      Modifier.fillMaxWidth()
                                          .padding(horizontal = screenWidth * 0.04f)
                                          .testTag("sliding_window_continue_button"))

                              Spacer(modifier = Modifier.height(screenHeight * 0.02f))
...
                                      Modifier.fillMaxWidth()
                                          .padding(horizontal = screenWidth * 0.04f)
                                          .testTag("sliding_window_tags_flow_row"),
                              ) {
                                selectedWorker.tags.forEach { tag ->
...
                                        modifier =
                                            Modifier.height(screenHeight * 0.03f)
                                                .testTag("starsRow"))
                                  }
                              Spacer(modifier = Modifier.height(screenHeight * 0.01f))
...
